cros: Fix initial appearance of themed browser window's caption buttons.

Bug: 839955
Change-Id: Ib8897bc667a0896f3f6cf607005738c6fbfc920d
Reviewed-on: https://chromium-review.googlesource.com/1048975
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Qiang Xu <warx@google.com>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557605}
Former-commit-id: 7665435ec16705f26cf15259d28b89d24ec80699